--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "version": 2, 
   "builds": [
     {
-      "src": "main.py"
+      "src": "main.py",
       "use": "@vercel/python"
     }
   ],
